--- a/weasel.custom.yaml
+++ b/weasel.custom.yaml
@@ -16,6 +16,8 @@ patch:
     qq.exe: {ascii_mode: false}
     telegram.exe: {ascii_mode: false}
     wechat.exe: {ascii_mode: false}
+    Obsidian.exe: {ascii_mode: true, vim_mode: true}
+    Code.exe: {ascii_mode: true, vim_mode: true}
   ascii_composer:
     good_old_caps_lock: false
     switch_key: {Caps_Lock: inline_ascii, Control_L: commit_code, Control_R: commit_code, Eisu_toggle: clear, Shift_L: commit_text, Shift_R: commit_text}
