feat: merge 星猫-01月08-仓

--- a/xmjd6.cizu.dict.yaml
+++ b/xmjd6.cizu.dict.yaml
@@ -10467,7 +10467,7 @@ sort: original
 迭戈	ddgeu
 都敢	ddgf
 道德规范	ddgfo
-多多关照	ddgfu
+多多关照	ddgfuu
 豆干	ddgfv
 都怪	ddgg
 嘀嘀咕咕	ddggo
@@ -10623,9 +10623,9 @@ sort: original
 都忙	ddmp
 迭忙	ddmpu
 蝶梦	ddmr
-爹妈	ddms
+爹妈	ddmsu
 斗嘛	ddmsoo
-都骂	ddmsu
+都骂	ddms
 都没	ddmw
 都美	ddmwu
 兜帽	ddmz
@@ -10819,7 +10819,7 @@ sort: original
 倒打一耙	ddypi
 豆芽	ddys
 叠压	ddysv
-都愿	ddyt
+都愿	ddytuv
 都匀	ddyw
 叠韵	ddywa
 都多一些	ddyx
@@ -12361,8 +12361,8 @@ sort: original
 赌本	djbna
 单肩包	djbo
 杜邦	djbp
-独霸	djbs
-读报	djbz
+独霸	djbsu
+读报	djbzo
 度假村	djc
 独裁	djch
 督促	djcj
@@ -12377,21 +12377,22 @@ sort: original
 度牒	djdd
 赌斗	djdda
 肚兜	djddu
-度的	djde
-读得	djdeo
+读的	djdeo
+读得	djdeou
 独得	djdeu
-到处都是	djdev
+到处都是	djdevu
 独担	djdf
 笃定	djdg
 对酒当歌	djdga
-肚带	djdh
+独带	djdhu
+肚带	djdhuv
 当今的	djdi
 当家的	djdio
-嘟嘟	djdj
+嘟嘟	djdjoo
 读读	djdjo
 都督	djdju
 肚肚	djdjuu
-独独	djdjuu
+独独	djdj
 大吉大利	djdl
 读点	djdm
 赌点	djdma
@@ -12443,7 +12444,7 @@ sort: original
 读着	djfeo
 堵着	djfev
 毒贩	djff
-大家风范	djffv
+大家风范	djffvo
 赌债	djfh
 电解质	djfi
 杜甫	djfj
@@ -12458,14 +12459,14 @@ sort: original
 等级制	djfu
 等级分	djfua
 答记者问	djfw
-独中	djfyui
-刀锯斧钺	djfya
+独中	djfyu
+刀锯斧钺	djfyai
 独照	djfz
 赌鬼	djgb
 赌狗	djgd
 镀铬	djge
 达成共识	djgev
-党纪国法	djgf
+党纪国法	djgfi
 独孤	djgj
 大肠杆菌	djgjv
 度过	djgl
@@ -12502,8 +12503,8 @@ sort: original
 度角	djjc
 独角	djjcu
 堵截	djjd
-搭接长度	djjdi
-当即决定	djjdia
+当即决定	djjdi
+搭接长度	djjdii
 打家劫盗	djjdio
 渡劫	djjda
 读解	djjdo
@@ -12561,9 +12562,9 @@ sort: original
 单键连击	djljo
 堵路	djlj
 独立	djlk
-肚里	djlku
+肚里	djlkui
 镀铝	djll
-独怜	djlm
+独怜	djlmuo
 独狼	djlp
 毒瘤	djlq
 毒辣	djls
@@ -12625,7 +12626,7 @@ sort: original
 毒针	djqn
 都长	djqp
 赌球	djqq
-东城区	djqv
+东城区	djqvvv
 低级趣味	djqw
 答记者问	djqwu
 堵墙	djqx
@@ -12653,7 +12654,7 @@ sort: original
 读条	djtc
 赌头	djtd
 独特	djte
-赌坛	djtf
+赌坛	djtfa
 独听	djtg
 电吉他	djti
 赌徒	djtj
@@ -12663,7 +12664,7 @@ sort: original
 底朝天	djto
 肚疼	djtr
 独具特色	djts
-大姐头	djtv
+大姐头	djtva
 独吞	djtw
 肚痛	djty
 镀铜	djtyi
@@ -12743,9 +12744,9 @@ sort: original
 打成一片	djypi
 毒牙	djys
 渡鸦	djysa
-都江堰	djyu
+都江堰	djyuav
 多见于	djyui
-都匀	djyw
+都匀	djywu
 单机游戏	djyx
 独用	djyy
 毒药	djyz
@@ -12832,8 +12833,8 @@ sort: original
 地洞	dkdy
 地动	dkdyv
 大快朵颐	dkdyvo
-地道	dkdz
-低到	dkdzi
+地道	dkdzv
+低到	dkdz
 德克士	dke
 地税	dkeb
 滴水	dkeba
@@ -12886,7 +12887,7 @@ sort: original
 地肥	dkfw
 底肥	dkfwo
 低庄	dkfx
-地中	dkfy
+地中	dkfyvi
 电控柜	dkg
 递归	dkgb
 地沟	dkgd
@@ -12963,7 +12964,7 @@ sort: original
 地价	dkjsv
 底卷	dkjt
 大卡车	dkjv
-地矿局	dkjvv
+地矿局	dkjvva
 敌军	dkjw
 帝君	dkjwo
 递降	dkjx
@@ -12996,9 +12997,9 @@ sort: original
 多亏了	dkl
 抵临	dklb
 底料	dklc
-低劣	dkld
+低劣	dkldi
 底楼	dkldo
-地漏	dkldv
+地漏	dkld
 大开绿灯	dkldvv
 低了	dkle
 底栏	dklf
@@ -13261,7 +13262,7 @@ sort: original
 剁掉	dldc
 多碟	dldd
 多劳多得	dlddu
-夺得	dlde
+夺得	dldev
 多得	dldeuu
 颠鸾倒凤	dldf
 多读	dldj
@@ -13307,7 +13308,7 @@ sort: original
 多上	dlep
 多傻	dles
 锻炼身体	dlet
-大连市	dlev
+大连市	dlevv
 多少	dlez
 栋梁之材	dlfc
 躲着	dlfe
@@ -13343,8 +13344,8 @@ sort: original
 多哥	dlgeu
 多感	dlgf
 多乖	dlgg
-打了个电话	dlgh
-多雇	dlgj
+打了个电话	dlghi
+多雇	dlgju
 躲过	dlgl
 多国	dlglu
 夺过	dlglv
@@ -13402,7 +13403,7 @@ sort: original
 剁成	dljru
 多家	dljs
 多加	dljsu
-独轮车	dlju
+独轮车	dljuvv
 多讲	dljx
 大罗金仙	dljxv
 灯笼裤	dlk
@@ -13559,7 +13560,7 @@ sort: original
 大力推进	dltjv
 多天	dltm
 多糖	dltp
-独联体	dltu
+独联体	dltuv
 大礼堂	dltv
 多桶	dlty
 对立统一	dltya
@@ -13600,7 +13601,7 @@ sort: original
 夺下	dlxs
 多选	dlxt
 夺路而逃	dlxtv
-地理学	dlxv
+地理学	dlxvv
 动力学	dlxva
 东拉西扯	dlxw
 大力宣传	dlxwv
@@ -14031,7 +14032,7 @@ sort: original
 东南风	dnf
 电脑桌	dnfi
 多瑙河	dnh
-多年后	dnhu
+多年后	dnhuu
 大男孩	dnhv
 动脑筋	dnj
 低年级	dnji
@@ -14363,7 +14364,7 @@ sort: original
 打起来	dqli
 丢路	dqlj
 丢脸	dqlm
-大招流	dqlv
+大招流	dqlvi
 丢命	dqmg
 丢面	dqmm
 打情骂俏	dqmq
@@ -15029,7 +15030,7 @@ sort: original
 大加	dsjsv
 大驾	dsjsva
 答卷	dsjt
-第四纪	dsju
+第四纪	dsjui
 大军	dsjw
 大春	dsjwv
 大奖	dsjx
@@ -15888,7 +15889,7 @@ sort: original
 对我们来说	dwme
 当我没说	dwmei
 趸卖	dwmh
-倒插门	dwmi
+倒插门	dwmii
 大五码	dwmv
 吨煤	dwmw
 对外贸易	dwmy
@@ -16037,7 +16038,7 @@ sort: original
 单选框	dxko
 掉下来	dxl
 吊儿郎当	dxld
-低效率	dxli
+低效率	dxlio
 第二名	dxm
 刀削面	dxma
 冬小麦	dxmu
@@ -16073,7 +16074,7 @@ sort: original
 大兴土木	dxtm
 歹戏拖棚	dxtp
 德尔塔	dxtu
-地下铁	dxtv
+地下铁	dxtvvi
 大系统	dxtvu
 地形图	dxtvv
 大学同学	dxtx
@@ -16094,8 +16095,8 @@ sort: original
 短信息	dxxu
 短消息	dxxua
 多想想	dxxuv
-东西欧	dxxv
-大猩猩	dxxvu
+东西欧	dxxvvv
+大猩猩	dxxv
 大学校园	dxxy
 都需要	dxy
 得心应手	dxye
@@ -16165,7 +16166,9 @@ sort: original
 都应当	dyduo
 第一点	dyduv
 等一等	dyduvu
+第一等	dyduvu
 独一档	dyduvv
+第一大	dyduvv
 得意的笑	dydx
 动动	dydy
 但一定要	dydyi
@@ -16351,6 +16354,7 @@ sort: original
 动乱	dylt
 等于零	dylu
 第一流	dyluv
+遁玉陵	dyluva
 动轮	dylw
 栋梁	dylx
 动量	dylxv
@@ -17201,7 +17205,7 @@ sort: original
 税款	ebkt
 税控	ebky
 受不了	ebl
-水玻璃	ebla
+水玻璃	eblav
 圣保罗	eblai
 水淋	eblb
 水疗	eblc
@@ -17674,7 +17678,7 @@ sort: original
 收货	edhl
 收获	edhla
 售货	edhli
-说大话	edho
+说大话	edhov
 说的话	edhou
 说得好	edhoua
 谁都会	edhoui
@@ -19097,7 +19101,7 @@ sort: original
 社会生产	ehejo
 社会实践	ehejoi
 社会生产力	ehel
-守护神	eheo
+守护神	eheoio
 社会上	eheoi
 晒伤	ehep
 生活水平	ehepu
@@ -19117,7 +19121,7 @@ sort: original
 社会发展	ehfq
 筛渣	ehfs
 生活状态	ehft
-受害者	ehfu
+受害者	ehfuo
 生活中	ehfua
 生活照	ehfuao
 生还者	ehfuv
@@ -19252,7 +19256,7 @@ sort: original
 韶华易逝	ehye
 社会舆论	ehyl
 生活用品	ehyp
-受欢迎	ehyu
+受欢迎	ehyua
 适合于	ehyui
 石灰岩	ehyv
 社会影响	ehyx
@@ -19332,13 +19336,13 @@ sort: original
 树多	ejdl
 书店	ejdm
 输电	ejdmv
-时间点	ejdo
+时间点	ejdoo
 竖裆	ejdp
 世界大战	ejdq
 数等	ejdr
 数大	ejds
 数段	ejdt
-生产队	ejdu
+生产队	ejduoa
 十九大	ejduu
 市场调查	ejdw
 社经地位	ejdwo
@@ -19392,8 +19396,9 @@ sort: original
 设计师	ejeo
 实际是	ejeoa
 试金石	ejeoi
-审计署	ejeoo
-时间上	ejeooi
+时间上	ejeoo
+实践上	ejeooi
+审计署	ejeooi
 市场上	ejeov
 书上	ejep
 书商	ejepa
@@ -19446,7 +19451,7 @@ sort: original
 十几种	ejfu
 生产者	ejfuo
 十进制	ejfuv
-石家庄	ejfv
+石家庄	ejfvo
 书费	ejfw
 世界范围	ejfwv
 梳妆	ejfxv
@@ -19564,7 +19569,7 @@ sort: original
 生产出来	ejjlu
 世界纪录	ejjlv
 书简	ejjm
-审计局	ejjo
+审计局	ejjooa
 舒畅	ejjp
 数九	ejjq
 市场竞争	ejjqo
@@ -20984,8 +20989,8 @@ sort: original
 上来看	elki
 说库	elkj
 湿淋淋	ellaaa
-水灵灵	ella
-湿漉漉	ellaa
+水灵灵	ellaa
+湿漉漉	ellaaa
 说林	ellb
 说了	elle
 说来	ellh
@@ -21067,7 +21072,7 @@ sort: original
 时来运转	elyfo
 生拉硬拽	elyfu
 朔月	elyh
-傻了眼	elyi
+傻了眼	elyia
 伸懒腰	elyio
 生拉硬扯	elyj
 睡了一觉	elyji
@@ -21546,7 +21551,7 @@ sort: original
 伸过	engli
 深广	engm
 身根	engn
-是哪个	engo
+是哪个	engoo
 甚寡	engq
 深耕	engr
 输尿管	engv
@@ -22016,7 +22021,7 @@ sort: original
 上火	ephl
 商潢	ephm
 伤痕	ephn
-视频会	epho
+视频会	ephoi
 商行	ephp
 赏花	ephq
 上滑	ephqi
@@ -23359,7 +23364,7 @@ sort: original
 生物化学	ewhx
 首尾呼应	ewhy
 生物界	ewj
-水务局	ewja
+水务局	ewjau
 谁叫	ewjc
 谁教	ewjco
 顺脚	ewjcu
@@ -38107,10 +38112,10 @@ sort: original
 工具	gyjl
 鬼蜮伎俩	gyjlu
 共聚	gyjlv
-共建	gyjm
+共建	gyjmva
 弓箭	gyjma
 工件	gyjmv
-攻坚	gyjmvi
+攻坚	gyjm
 功臣	gyjn
 工厂	gyjp
 工场	gyjpv
@@ -41602,8 +41607,8 @@ sort: original
 忽悠	hjyd
 护佑	hjydi
 互有	hjydv
-胡言	hjyf
-护眼	hjyfi
+胡言	hjyfu
+护眼	hjyf
 呼延	hjyfo
 呼应	hjyg
 很久以后	hjyh
@@ -44252,8 +44257,8 @@ sort: original
 互相帮助	hxbqv
 和而不同	hxbt
 哈尔滨工业大学	hxbx
-谎报	hxbz
-黄暴	hxbzv
+谎报	hxbzo
+黄暴	hxbz
 含羞草	hxc
 黄册	hxce
 黑箱测试	hxcei
@@ -45220,7 +45225,7 @@ sort: original
 号楼	hzldo
 好咧	hzld
 好了	hzle
-好兰	hzlf
+好兰	hzlfao
 号令	hzlg
 好来	hzlh
 好路	hzlj
@@ -56783,8 +56788,8 @@ sort: original
 快开	kgkh
 可歌可泣	kgkq
 开工率	kgl
-快乐	kgle
-快了	kgleo
+快乐	kgleo
+快了	kgle
 快来	kglh
 看过来	kgli
 脍鲤	kglk
@@ -57826,7 +57831,7 @@ sort: original
 可能只是	knfev
 垦覆	knfj
 垦殖	knfk
-垦种	knfy
+垦种	knfya
 肯干	kngf
 垦耕	kngr
 可能会	knh
@@ -85069,7 +85074,7 @@ sort: original
 如您	rjnb
 嚅嗫	rjnd
 汝南	rjnf
-如泥	rjnk
+如泥	rjnka
 乳牛	rjnq
 如能	rjnr
 入内	rjnw
@@ -90260,9 +90265,9 @@ sort: original
 头花	tdhq
 贴花	tdhqa
 跳到黄河洗不清	tdhqo
-偷欢	tdht
+偷欢	tdhtia
 铁环	tdhti
-偷换	tdhtii
+偷换	tdht
 头昏	tdhw
 铁黑	tdhwi
 投簧	tdhx
@@ -91397,7 +91402,7 @@ sort: original
 挺旺	tgwp
 停船	tgwt
 廷尉	tgww
-听窗	tgwx
+听窗	tgwxo
 挺冲	tgwy
 停潮	tgwz
 泰戈尔	tgx
@@ -109393,7 +109398,6 @@ sort: original
 像我	xxwl
 向我	xxwlu
 信息网络	xxwli
-像我	xxwliu
 想我	xxwlv
 祥创	xxwm
 想问	xxwn
@@ -109852,8 +109856,7 @@ sort: original
 需要一个	xyygv
 闲云野鹤	xyyh
 县医院	xyyi
-211工程	xyyj
-心有余悸	xyyjo
+心有余悸	xyyj
 胸臆	xyyk
 雄鱼	xyyl
 心猿意马	xyym
@@ -110209,8 +110212,8 @@ sort: original
 银发	ybfsi
 印发	ybfsu
 用不着	ybfu
-远不止	ybfv
-有办法	ybfva
+远不止	ybfvvi
+有办法	ybfv
 一把抓	ybfvi
 一百分	ybfvv
 样板房	ybfvvo
@@ -117590,7 +117593,7 @@ sort: original
 游戏王	yxwa
 迎新晚会	yxwh
 有心无力	yxwl
-影响我们	yxwm
+影响我们	yxwmo
 影响我	yxwo
 云消雾散	yxws
 一些问题	yxwt
@@ -117646,8 +117649,8 @@ sort: original
 验孕棒	yybaa
 原原本本	yybb
 永别	yybd
-源源不断	yybda
-以怨报德	yybdau
+以怨报德	yybda
+源源不断	yybdaa
 依依不舍	yybe
 幽游白书	yybei
 有眼不识泰山	yybev
@@ -117733,7 +117736,8 @@ sort: original
 扬扬得意	yydyi
 永动	yydyo
 远远低于	yydyv
-一一对应	yydyvv
+远远大于	yydyv
+远远多于	yydyv
 用到	yydz
 甬道	yydza
 用刀	yydzu
@@ -117761,7 +117765,7 @@ sort: original
 永世	yyeko
 用时	yyeku
 用事	yyekuv
-永硕	yyel
+永硕	yyelov
 又有什么	yyem
 永远是	yyeo
 用上	yyep
@@ -117790,7 +117794,6 @@ sort: original
 淫雨霏霏	yyffa
 营业执照	yyffi
 营养丰富	yyffio
-熠熠发光	yyfg
 抑音符	yyfi
 永福	yyfj
 勇夫	yyfja
@@ -117888,10 +117891,10 @@ sort: original
 一有机会	yyjhv
 用处	yyjj
 涌出	yyjja
-囿于成见	yyjji
-一言既出	yyjjv
+囿于成见	yyjjiv
+一言既出	yyjjvo
 一语成谶	yyjjvo
-远远超出	yyjjvv
+远远超出	yyjjv
 拥挤	yyjk
 永记	yyjko
 用计	yyjku
@@ -117916,12 +117919,11 @@ sort: original
 用家	yyjs
 永嘉	yyjso
 样样精通	yyjt
-游鱼出听	yyjta
+游鱼出听	yyjtau
 压压惊	yyjv
 咏春	yyjw
 油盐柴米酱醋茶	yyjwa
 拥军	yyjwi
-永春	yyjwo
 一跃成为	yyjwv
 应用程序	yyjx
 牙龈出血	yyjxv
@@ -117931,7 +117933,8 @@ sort: original
 狺狺狂吠	yykf
 优衣库	yyki
 泳裤	yykj
-隐约可见	yykja
+隐约看见	yykjaa
+隐约可见	yykjaa
 也有可能	yykn
 音乐课	yyko
 永康	yykp
@@ -118166,9 +118169,9 @@ sort: original
 用一下	yyxu
 有影响	yyxv
 涌向	yyxx
-牙牙学语	yyxy
-音乐学院	yyxyo
-有样学样	yyxyv
+牙牙学语	yyxyvv
+音乐学院	yyxyou
+有样学样	yyxy
 有意义	yyy
 也一样	yyya
 溢于言表	yyybav
@@ -118215,7 +118218,7 @@ sort: original
 用用	yyyy
 隐隐约约	yyyya
 莺莺燕燕	yyyyi
-永远永远	yyyyo
+永远永远	yyyyov
 一样一样	yyyyv
 原因一样	yyyyvi
 犹犹豫豫	yyyyu
@@ -118223,7 +118226,8 @@ sort: original
 羊腰子	yyz
 洋洋自得	yyzd
 用在	yyzh
-用足	yyzj
+用组	yyzj
+用足	yyzju
 用字	yyzk
 用作	yyzl
 永远在	yyzo
@@ -118379,7 +118383,7 @@ sort: original
 油嘴滑舌	yzhea
 药盒	yzhei
 咬合	yzheo
-要含	yzhf
+要含	yzhfv
 要害	yzhh
 瑶湖	yzhj
 运载火箭	yzhjv
@@ -119266,7 +119270,7 @@ sort: original
 尊师重教	zefj
 则治	zefk
 择捉	zefli
-再生父母	zefm
+再生父母	zefmv
 择分	zefn
 责罚	zefs
 总是这样	zefy
@@ -119441,6 +119445,7 @@ sort: original
 暂借	zfjd
 组织建设	zfje
 组织结构	zfjga
+组织架构	zfjgaa
 组织机构	zfjgaa
 坐飞机	zfji
 暂居	zfjl
@@ -119965,7 +119970,7 @@ sort: original
 最后要	zhyou
 最后又	zhyoua
 最后一	zhyouv
-在因	zhyb
+在因	zhybv
 最后一次	zhyc
 在有	zhyd
 最后一点	zhydo
@@ -120128,7 +120133,7 @@ sort: original
 足见	zjjmo
 资产阶级革命	zjjmoo
 最近几年	zjjn
-最接近	zjjo
+最接近	zjjoi
 总成绩	zjjov
 组成	zjjr
 租价	zjjs
@@ -121118,7 +121123,7 @@ sort: original
 怎么样的	zmyd
 怎么一回事	zmye
 怎么样了	zmyl
-怎么样呢	zmyn
+怎么样呢	zmynu
 怎么又	zmyu
 怎么也	zmyuu
 字面意义	zmyy
@@ -121888,7 +121893,7 @@ sort: original
 尊姓大名	zxdm
 最新的	zxdo
 最小的	zxdoi
-总协定	zxdou
+总协定	zxdouo
 宰相肚里能撑船	zxdwov
 在校生	zxevv
 早些时候	zxeh
@@ -121960,7 +121965,7 @@ sort: original
 再也不能	zybn
 棕绷	zybr
 总把	zybs
-再也不	zybv
+再也不	zybva
 总被	zybw
 在一般情况下	zybx
 再也不用	zyby
@@ -121985,7 +121990,7 @@ sort: original
 总督	zydj
 总舵	zydl
 总店	zydm
-在一定范围内	zydn
+在一定范围内	zydnv
 早一点	zydov
 纵荡	zydp
 怎样的人	zydr
