--- a/xmjd6.zidingyi.dict.yaml
+++ b/xmjd6.zidingyi.dict.yaml
@@ -8,6 +8,230 @@ sort: original
 #单字→bb
 
 #自定义的词语
+尊听	zwtg
+听床	tgwx
+听床	tgwmo
+停床	tgwxio
+的印象	dyxuu
+多语言	dyyuoo
+档子事	dzeva
+单字派	dzpoo
+孰不知	ebfovu
+是比较	ebjov
+沙宝亮	eblaoo
+尚保罗	ebliii
+辻本杏	ebxuvv
+水卜樱	ebyaov
+山顶洞	eddiva
+上大号	edhi
+瘆得慌	edho
+睡大觉	edjiv
+手岛葵	edkiui
+说到头	edtovo
+矢端图	edtuo
+水滴筹	edwa
+史帝文	edwioo
+刷抖音	edya
+沙沙声	eeea
+辻诗音	eeyuoo
+竖中指	effiii
+刷知乎	efhau
+施之皓	efhoou
+生之花	efhu
+沈芳如	efraia
+尚富霞	efxiov
+神之眼	efyoo
+谁跟谁	egeoo
+身高差	egwu
+身后的	ehduu
+实话说	eheo
+生活着	ehfu
+生活了	ehluaa
+社会我	ehwoi
+社会摇	ehyoi
+删好友	ehyu
+水晶蝶	ejdaoi
+双精度	ejdaoo
+手机端	ejdi
+时间短	ejdo
+升级到	ejdu
+删除掉	ejduai
+受处分	ejfuuu
+世界中	ejfvii
+时间长	ejjo
+时间紧	ejjoo
+水晶块	ejka
+施教日	ejro
+受惊吓	ejxuo
+水均益	ejyav
+收快递	ekda
+示廓灯	ekdv
+山口晶	ekjioo
+收款码	ekma
+上跨桥	ekqiov
+水琉璃	ella
+上了瘾	elyi
+枢木葵	emkvvi
+神木丽	emlovv
+什么仇	emwi
+什么怨	emyiuu
+收纳袋	enda
+是能够	engo
+少女套	enti
+水平上	epea
+舒普深	epei
+视频号	epho
+水胖子	epzau
+说正事	eqeov
+神助攻	eqgo
+食其肉	eqrivi
+杀人书	ereu
+沈人杰	erjaiv
+上三百	esbivv
+生死局	esju
+身体里	etlui
+申太权	etqiv
+霜纹布	ewbv
+上位者	ewfiiu
+拾味馆	ewgiou
+数万个	ewgo
+手冲壶	ewhi
+沙悟净	ewja
+走过去	zgqv
+字间距	zjjoo
+在家吗	zjmvo
+曾春年	zjnov
+增城区	zjqvvv
+砸场子	zjzv
+足力健	zljo
+做某事	zmeiv
+祖奶奶	znno
+子账号	zqhaa
+自然卷	zrju
+曾仁郁	zryoi
+字统网	ztwo
+泽尔丹	zxda
+最爱的	zxdou
+曾爱玲	zxlou
+走一波	zybv
+怎样来	zyluv
+总有些	zyxo
+祖爷爷	zyyouu
+自由勇	zyyuia
+粗狂	cjkxo
+粗旷	cjkxoo
+粗矿	cjkxov
+丢垃圾	dlju
+迪卢克	dlkiiu
+倒了霉	dlmiav
+东丽区	dlqvvv
+杜拉斯	dlsviv
+第六天	dltu
+大懒堂	dltvo
+大龙虾	dlxv
+独龙族	dlzuvo
+对没错	dmca
+倒霉催	dmciv
+冬萌功	dmgui
+邓妙华	dmhaa
+地脉花	dmhvu
+大面具	dmjvv
+都么有	dmyuu
+杜冥鸦	dmyvov
+电脑端	dndiu
+的男孩	dnhuia
+呆婆鸭	dpyo
+段正淳	dqjuva
+动起来	dqlv
+党主席	dqxio
+段千寻	dqxuu
+得人惊	drjui
+蹬三轮	dslo
+黛丝瑞	dsria
+大头佛	dtfv
+都挺好	dthu
+赌徒套	dtta
+邓文迪	dwdaoi
+耽误事	dwev
+第五季	dwjuvu
+点外卖	dwmi
+打文章	dwqi
+第五天	dwtuvv
+大西洲	dxfvvo
+带小孩	dxhv
+地县级	dxjvi
+掉线了	dxli
+多谢了	dxluo
+的心理	dxluov
+地下情	dxqv
+大萧条	dxtv
+大元帅	dyevv
+邓颖芝	dyfau
+冬月枫	dyfuuv
+等一会	dyhuvi
+第一回	dyhuvi
+邓一君	dyjava
+邓咏家	dyjaoo
+董运昌	dyjivo
+道元京	dyjovo
+第一句	dyjuv
+大月卡	dykv
+达与璐	dylvvv
+得要命	dymuvi
+大浴女	dynvaa
+邓伊茜	dyqai
+丁义珍	dyqvov
+大雁塔	dytvvv
+大渝网	dywvai
+点一下	dyxiv
+打一下	dyxivv
+打了鸡血	dljxia
+到了没有	dlmyv
+到了哪里	dlnl
+打了一顿	dlydi
+等了又等	dlydua
+到了以后	dlyhva
+跌了一跤	dlyjoa
+大泷咏一	dlyyva
+多么多么	dmdmuu
+大漠孤烟	dmgyva
+倒霉孩子	dmhziv
+多米尼克	dmnkuo
+到没朋友	dmpy
+达摩拳王	dmqwv
+打马赛克	dmskia
+都没问题	dmwtu
+都没想到	dmxdu
+也少	yeez
+打一遍	dybi
+可能这样	knfy
+可能只有	knfyv
+摘月	fhyhi
+逾期还款	yqhk
+难表	nfbc
+述其	ejqkvv
+想起你了	xqnl
+能够这样	ngfyav
+女能	nlnra
+挪能	nlnr
+红暴	hybza
+红爆	hybzao
+黄爆	hxbzv
+气泡音	qpyua
+扎里曼	flmiio
+钢恶	gpxei
+走宽	zdkt
+走宽了	zklvoa
+路走宽了	lzkl
+路走宽	lzkov
+走窄	zdfh
+走窄了	zflv
+路走窄	lzfo
+路走窄了	lzflov
+肚片汤	dptu
+跌了吗	dlmoa
+左右思量	zyslv
+左右寻思	zyxsvv
 光顺	gxewi
 色图选项	stxxu
 全球公认	qqgriv
@@ -418,7 +642,195 @@ sort: original
 代位	dhww
 戴薇	dhwwui
 带笑	dhxc
+挡横儿	dhxivu
+稻花香	dhxu
+大换血	dhxviu
+大会员	dhyv
+大忽悠	dhyvu
+戴泽	dhzeu
+都摆	djbhu
+动机不纯	djbjvv
+当讲不当讲	djbji
+读不	djbjo
+都奔	djbnu
+毒吧	djbs
+丹吉布森	djbsuv
+大几百	djbv
+杜北	djbwvi
+都暴	djbzu
+都才	djchu
+都踩	djchuo
+杜德	djdevu
+堵的	djde
+堵得	djdev
+独单	djdfu
+都待	djdh
+大家都会	djdhvo
+毒毒	djdjv
+都几点了	djdluu
+都当	djdpui
+大家都	djdvo
+大奸大恶	djdx
+都动	djdyu
+到就是赚到	djedv
+当今世界	djejii
+赌术	djeja
+读熟	djejoo
+多久时间	djejuu
+待机时间	djejuv
+独食	djeku
+都试	djekuo
+读诗	djekuo
+毒师	djekv
+都伤	djepui
+都顺	djew
+当场身亡	djewi
+都反	djffu
+单处罚金	djfjo
+都值	ddfkui
+肚中	djfy
+都干	ddgfu
+都赶	ddgfuv
+都教	ddjcuu
+低级阶段	djjdia
+低价出售	djjeii
+都聚	ddjlu
+踮脚尖	djjo
+独撑	djjru
+多继承	djju
+大季家	djjvuo
+都赖	ddlhu
+稻场流花	djlhuv
+点击量	djliv
+毒理	djlkv
+独力	djlku
+打出来了	djlli
+独恋	djlm
+到处乱跑	djlpvu
+等距离	djluo
+得出了	djlua
+都木	ddmju
+都嘛	ddmsuo
+读吗	djmso
+都你	ddnku
+读片	djpmou
+抵价券	djqi
+点进去	djqiv
+涤净青金	djqja
+都气	ddqkuu
+都整	djqr
+大几千	djqv
+都素	ddsjuv
+到今天为止	djtfv
+都停	ddtgu
+第几天	djtuu
+第九天	djtuuv
+大集体	djtvii
+毒鸡汤	djtv
+都小	ddxcu
+东京爱情故事	djxev
+杜安	djxf
+笃爱	djxhv
+东京奥运会	djxhvo
+都系	ddxkuu
+都洗	ddxkua
+都向	djxxu
+大叫一声	djyevo
+当成一种	djyfi
+当成一个	djygi
+大家已经	djyjv
+读一	djykov
+毒医	djykv
+多久以前	djyq
+都怨	ddyt
+等价于	djyu
+赌运	djyw
+动口不动手	dkbe
+动手不动口	debkv
+对口帮扶	dkbfa
+骶部	dkbjio
+帝吧	dkbsoo
+滴吧	dkbsa
+地宝	dkbzvo
+底掉	dkdco
+递到	dkdzo
+地师	dkekvi
+地州	dkfdvo
+地富	dkfjvo
+低质	dkfkiu
+低智	dkfkiu
+低至	dkfkiv
+地知	dkfkvu
+大开方便之门	dkfmvv
+低仿	dkfpii
+蒂法	dkfsi
+低重	dkfy
+地鬼	dkgbvu
+低格	dkgeiv
+滴个	dkgea
+大科狗	dkgvu
+迪高	dkgzio
+大口喝酒	dkhjvo
+地脚	dkjcvu
+地胶	dkjcvu
+嫡出	dkjjaa
+地籍	dkjkvu
+笛剑	dkjmui
+底架	dkjsoa
+弟家	dkjsoo
+大课间	dkjvvo
+地裂	dkldv
+打空了	dklioa
+打开了新世界的大门	dklmiv
+滴溜	dklqa
+地量	dklxv
+地笼	dklyv
+底棉	dkmmov
+迪曲	dkqlii
+地张	dkqpva
+大口吃肉	dkwr
+大块吃肉	dkwrv
+底味	dkwwoo
+迪欧	dkxdiv
+打开心扉	dkxfiv
+低血	dkxhiu
+低血	dkxdiu
+迪尔	dkxji
+地仙	dkxmvi
+帝一	dkykov
+低哑	dkysio
+蒂亚	dkysiv
+地元	dkytvv
+地利不如人和	dlbhvu
+多播	dlblu
+倒了八辈子霉	dlbmi
+倒了八辈子血霉	dlbmi
+到了吧	dlbva
+独立财产	dlcjuo
+躲得	dldeu
+躲的	dldeuu
+踱来踱去	dldqov
+东来东往	dldwvv
+地理大发现	dldxvv
+大力水手	dleeva
+多熟	dleju
+多试	dlekuo
+大龄剩女	dlenv
+大力神	dlev
+杜丽莎	dlevvi
+到了之后	dlfhv
+多址	dlfkuv
+多支	dlfkuu
+多怪	dlggu
+打了个招呼	dlghi
+多股	dlgj
+舵工	dlgyuv
+多回	dlhbui
+多叫	dljcuo
+多节	dljdu
 长牙	jpysu
+丢了魂	dlhu
+多近	dljbuu
 秃码	tjmsuv
 兔码	tjmsu
 逛了没	glmua
@@ -1787,7 +2199,7 @@ sort: original
 向他道歉	xtdq
 向她道歉	xtdqu
 说出道歉	ejdqo
-有些微妙	yxwmvi
+有些微妙	yxwmv
 仔细思索	zxssia
 不太周全	btfq
 那个啊	ngx
@@ -2363,9 +2775,190 @@ sort: original
 她也不让	tybra
 我也不让	wybr
 卖够	mhgdu
+死犟	skjxv
+满宠	mfwyao
 也不让	ybrav
 又不让	ybravo
 又比如	ybrava
+一些日子	yxrz
+也许我们	yxwma
+以下问题	yxwta
+英雄血条	yxxt
+一心想要	yxxyv
+也许需要	yxxya
+硬性要求	yxyq
+有效运行	yxyxvo
+医学影像	yxyxvo
+一些原因	yxyyv
+游移不定	yybdau
+远远不止	yybfvv
+远远不及	yybjv
+以一当百	yydbav
+有一点点	yyddvv
+永远滴神	yydeov
+永远的神	yydeov
+永远单身	yydeov
+语音电话	yydho
+义眼丁真	yydqo
+有一点儿	yydxv
+永远都要	yydyov
+一一对应	yydyvv
+要雨得雨	yydyvv
+应用市场	yyejou
+意义上看	yyekoo
+有约束力	yyelv
+语言中枢	yyfeo
+也有这个	yyfg
+泱泱中华	yyfhaa
+远游之枪	yyfqva
+犹有过之	yygfuv
+也有关系	yygxa
+有优惠吗	yyhm
+饮誉华夏	yyhxuo
+意义何在	yyhzo
+妖艳贱货	yyjhav
+由远及近	yyjji
+远远近近	yyjjvv
+样样俱全	yyjqvv
+异于常人	yyjra
+也有今天	yyjta
+咬牙坚持	yyjwo
+隐隐可见	yykja
+一一列举	yyljvv
+一一罗列	yyllv
+炎炎烈日	yylroo
+幼岩龙蜥	yylxai
+烟雨濛濛	yymmov
+由于没有	yymyi
+有用没用	yymyvu
+也有那个	yynga
+野野浦暖	yypni
+有一阵子	yyqz
+永远如此	yyrc
+云游四方	yysfv
+夜有所梦	yysmo
+有意为之	yywfv
+一夜无眠	yywmvo
+有影响吗	yyxmv
+语音消息	yyxxo
+一跃而下	yyxxvo
+咿呀学语	yyxyo
+远远小于	yyxyv
+也有一点	yyyda
+也有一种	yyyfa
+要有一个	yyygv
+永永远远	yyyyoo
+育有一子	yyyzov
+有缘再见	yyzjv
+一字不差	yzbwvo
+优子惠飞	yzhfia
+要怎么办	yzmb
+远在天涯	yztyvv
+远走天涯	yztyvv
+越早越好	yzyhv
+又脏又累	yzyla
+又怎样呢	yzyna
+悠哉悠哉	yzyziv
+悠哉游哉	yzyziv
+坐不改姓	zbgxi
+再比如说	zbrev
+泽村玲子	zclz
+自动回复	zdhf
+自动退出	zdtj
+早点休息	zdxxo
+左躲右闪	zdyevu
+走到最后	zdzhvv
+暂时不能	zebnv
+宗室大剑	zedjo
+嘴上说着	zeefo
+宗师之力	zefloi
+总是这么	zefm
+暂时只能	zefnvo
+宗室长弓	zejgo
+宗室长剑	zejjoo
+宗室猎枪	zelqo
+走上前来	zeqlv
+则是因为	zeywa
+最胜紫金	zezjo
+再生资源	zezy
+最终兵器	zfbqoa
+载舟覆舟	zfffv
+祖父祖母	zfzmo
+尊贵铂金	zgbj
+走狗屎运	zgey
+走个过场	zggj
+走过路过	zglg
+罪过罪过	zgzg
+作何打算	zhdsi
+最好可以	zhkyo
+综合来说	zhlea
+脏活累活	zhlhua
+最好能够	zhngo
+最后一步	zhybo
+最后一遍	zhybou
+最后一种	zhyfou
+最后一张	zhyq
+资产负债	zjfq
+宗教改革	zjggo
+枣夹核桃	zjhtv
+早就可以	zjkyo
+做出判断	zjpdi
+自理运费	zlyfu
+再来一瓶	zlypv
+怎么操作	zmcz
+在忙什么	zmem
+怎么什么	zmemu
+怎么着了	zmfl
+怎么称呼	zmjh
+怎么也得	zmydu
+怎么样来	zmylu
+怎么也能	zmyn
+在娘胎里	zntl
+在那以后	znyh
+暂且不论	zqbl
+最强王者	zqwf
+自找无趣	zqwq
+再然后呢	zrhnv
+再三思考	zsskv
+总体说来	ztel
+总体上来	ztelo
+增田俊朗	ztjlvi
+在她看来	ztklv
+自讨无趣	ztwq
+佐藤爱琉	ztxli
+佐田雅志	ztyfii
+作为重点	zwfd
+在我之上	zwfev
+最为致命	zwfm
+自我中心	zwfx
+早川瑞希	zwrx
+仔细了解	zxlj
+在校期间	zxqjv
+自行调整	zxtqu
+在线传输	zxwe
+作息习惯	zxxg
+遭遇不测	zybcv
+怎样的事	zydeu
+自有定数	zydeuv
+怎样的呢	zydn
+在一瞬间	zyejvv
+自由职业	zyfyu
+奏音花音	zyhyv
+左右结构	zyjgv
+醉意朦胧	zymlvo
+再也没能	zymnv
+在一起的	zyqdv
+总有人说	zyreo
+早已有之	zyyfoa
+怎样一种	zyyfu
+佐野元春	zyyji
+总有一款	zyykov
+自在松石	zzse
+暗影战斧	xyqf
+校园欺凌	xyql
+享誉全球	xyqqo
+暗影主宰	xyqzo
+笑意盎然	xyxr
 又未让	ywra
 连他都不	ltdb
 连她都不	ltdbv
@@ -2793,7 +3386,7 @@ sort: original
 不该跑的	bgpd
 吃不下去	wbxqo
 来多点	lddv
-独钟	djfyu
+独钟	djfyui
 唯有独钟	wydfo
 难支	nffka
 独树难支	denf
@@ -3794,7 +4387,7 @@ Chaumet	emblio
 大楼这边	dlfbvv
 打开这个	dkfg
 低这	dkfeio
-得出这样	djfy
+得出这样	djfyua
 点击这里	djfliv
 代这	dhfei
 带这	dhfev
@@ -4090,7 +4683,7 @@ Chaumet	emblio
 把这个	bfgi
 把这个	bqgi
 的这个	dqguo
-说这个	eqgooi
+说这个	eqgoo
 发这个	fqgao
 看这个	kqgi
 看这个人	kqgr
@@ -7173,7 +7766,7 @@ PC模式	pcme
 先不买了	xbmlu
 鲎鱼	hdylo
 起灰	qkhbv
-毒爆	djbzv
+毒爆	djbz
 藕带	xddhi
 紫卡	zkks
 鸡你太美	jntm
@@ -7920,7 +8513,7 @@ jer发紫	jxfza
 咬嘴唇	yzjo
 一字螺丝刀	yzldv
 一字批	yzpv
-左勾拳	zgqv
+左勾拳	zgqvu
 做好了	zhli
 足球服	zqfo
 早孕测试笔	zycb
