feat: 增加默认的hamster.yaml配置，增加键盘配置

--- a/weasel.custom.yaml
+++ b/weasel.custom.yaml
@@ -18,6 +18,7 @@ patch:
     wechat.exe: {ascii_mode: false}
     Obsidian.exe: {ascii_mode: true, vim_mode: true}
     Code.exe: {ascii_mode: true, vim_mode: true}
+    Chrome.exe: {ascii_mode: true}
   ascii_composer:
     good_old_caps_lock: false
     switch_key: {Caps_Lock: inline_ascii, Control_L: commit_code, Control_R: commit_code, Eisu_toggle: clear, Shift_L: commit_text, Shift_R: commit_text}
