--- a/.github/workflows/rebase.yml
+++ b/.github/workflows/rebase.yml
@@ -15,8 +15,8 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
+      # - name: Check out repository
+      #   uses: actions/checkout@v4
       - name: rebase
         uses: ./.github/actions/rebase
         with:
